--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
-/dist
-/tmp
-/public
+tmp/
+public/
 dist/
 
 # Runtime data
@@ -24,12 +21,17 @@ pids
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# IDE
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # misc
 .sass-cache
@@ -40,10 +42,15 @@ typings
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Dependency directories
 node_modules/
 jspm_packages/
+*.local
 
 # Optional npm cache directory
 .npm
