--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && mv dist/index.html dist/frontend_index.html",
     "preview": "vite preview"
   },
   "dependencies": {
