--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Run frontend tests
-        run: npm run test --prefix frontend
+      - name: Run tests
+        run: npm test -ws
 
