--- a/src/config/package.json
+++ b/src/config/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "config",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && mv dist/index.html dist/config_index.html",
+    "test": "jest",
     "preview": "vite preview"
   },
   "dependencies": {
+    "nhsuk-frontend": "^6.1.0",
+    "nhsuk-react-components": "^2.1.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.1",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "react-test-render": "^1.1.2",
+    "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "^4.6.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "whatwg-fetch": "^3.6.2"
   },
   "main": "index.js",
   "keywords": [],
