--- a/src/prototype/package.json
+++ b/src/prototype/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "build": "gulp build",
-    "postinstall": "npm run build",
     "start": "node app.js",
     "test": "",
     "prewatch": "gulp build",
@@ -32,10 +31,9 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^5.0.0",
     "keypather": "^3.0.0",
-    "nhsuk-frontend": "^6.1.0",
+    "nhsuk-frontend": "^6.1.1",
     "nunjucks": "^3.2.3",
-    "path": "^0.12.7",
-    "sass": "^1.44.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
