--- a/src/prototype/package.json
+++ b/src/prototype/package.json
@@ -33,7 +33,8 @@
     "keypather": "^3.0.0",
     "nhsuk-frontend": "^6.1.1",
     "nunjucks": "^3.2.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
