--- a/src/config/package.json
+++ b/src/config/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "frontend",
-  "description": "Type 1 Opt-Out frontend",
+  "name": "config",
+  "description": "Type 1 Opt-Out configuration module",
   "private": true,
-  "version": "0.1",
+  "version": "0.0.0",
   "type": "module",
   "main": "index.js",
   "keywords": [],
