--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nhsuk-react-components": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "rsuite": "^5.15.1",
+    "use-react-router-breadcrumbs": "^3.2.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
